updated about me

--- a/index.html
+++ b/index.html
@@ -49,18 +49,15 @@
 								<div class="col-sm-9 ">
 									<p class="h3"> About Me</p>
 									<p>
-									I am currently a Master's student at McGill University studying applied mathematics.
-									My research lies in the intersection of convex optimization, machine learning and high dimensional statistics. 
+									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
+									My research applies ideas from high dimensional statistics and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
 									</p>
 
 									<p>
-									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. 
+									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics of learning algorithms, and generalization error for high dimensional stochastic algorithms. 
 									</p>
 									<p>
-									Now I work on developing average case complexities and generalization error for high dimensional stochastic algorithms. 
-									</p>
-									<p>
-									As part of my internship at Valence Discovery, I am doing research in applying unsupervised models to learn a disentangled representation of molecular space in aims to optimize the drug discovery process.
+									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a>, I am applying unsupervised models to learn a disentangled representation of molecular space in order to to optimize the drug discovery process.
 									</p>
 								</div>
 							  </div>
@@ -77,6 +74,9 @@
 									<a href="https://arxiv.org/pdf/2206.01029v1.pdf" target="_blank" class="
 			scrolly">Trajectory of Mini-Batch Momentum</a> 
 								  <br>
+								  <p>
+
+								  <p>
 								  
 								</div>
 								<div class="col-sm-3 ">
@@ -86,6 +86,7 @@
 							  </div>
 						</div>
 					</section>
+
 
 
 		<!-- Footer -->
