updated about me.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@
 									</p>
 
 									<p>
-									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics of learning algorithms, and generalization error for high dimensional stochastic algorithms. 
+									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
 									</p>
 									<p>
-									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a>, I am applying unsupervised models to learn a disentangled representation of molecular space in order to to optimize the drug discovery process.
+									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a> I am applying unsupervised models to learn a disentangled representation of molecular space in order to to optimize the drug discovery process.
 									</p>
+									<p>
+									In my free time, I enjoy playing basketball and playing Chopin and Bach on the piano.
+									</p>
+								</div>
 								</div>
 							  </div>
 						</div>
