--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div class="row">
 								<div class="col-sm-9 ">
 									<p class="h3"> Research</p>
-									<a href="https://arxiv.org/pdf/2206.01029v1.pdf" target="_blank" class="
+									<a href="https://openreview.net/pdf?id=z9poo2GhOh6" target="_blank" class="
 			scrolly">Trajectory of Mini-Batch Momentum</a> 
 								  <br>
 								  <p>
