--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			big scrolly">About Me</a> &nbsp; &nbsp;	&nbsp;
 			&nbsp; &nbsp; <a href="#research" class="button
 			big scrolly">Research</a> &nbsp; &nbsp;	&nbsp;
-			&nbsp; &nbsp; <a href="Research/cv.pdf" target="_blank" class="button
+			&nbsp; &nbsp; <a href="Research/AndrewResume_Academia.pdf" target="_blank" class="button
 			big scrolly">CV</a>
 				</div>
 			</section>
