--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div class="col-sm-9 ">
 									<p class="h3"> Research</p>
 									<a href="https://openreview.net/pdf?id=z9poo2GhOh6" target="_blank" class="
-			scrolly">Trajectory of Mini-Batch Momentum</a> 
+			scrolly">Trajectory of Mini-Batch Momentum (accepted, NeurIPS 2022)</a> 
 								  <br>
 								  <p>
 
