--- a/index.html
+++ b/index.html
@@ -48,19 +48,20 @@
 								</div>
 								<div class="col-sm-9 ">
 									<p class="h3"> About Me</p>
+									<h2> Research Interests </h2>
 									<p>
 									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
 									My research applies ideas from high dimensional statistics and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
 									</p>
-
 									<p>
 									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
 									</p>
 									<p>
 									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a> I am applying unsupervised models to learn a disentangled representation of molecular space in order to to optimize the drug discovery process.
 									</p>
+									<h2>Hobbies</h2>	
 									<p>
-									In my free time, I enjoy playing basketball and playing Chopin and Bach on the piano.
+									In my free time, I enjoy playing classical music on the piano, particularly Bach and Chopin. I also like to find ways to automate tasks in my life through scripting in Python. Lastly, I occassionally watch sports and play basketball. 
 									</p>
 								</div>
 								</div>
