--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 									<img src="images/eat.jpg" alt="..." class="rounded-circle img-thumbnail">
 								</div>
 								<div class="col-sm-9 ">
-									<p class="h2"> About Me</p>
 									<h3> Research Interests </h2>
 									<p>
 									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
-									My research applies ideas from high dimensional statistics and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
+									My research applies ideas from high dimensional statistics and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. I've recently gained interest in the areas of optimal transport and it's applications
+									to machine learning. 
 									</p>
 									<p>
 									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
 									</p>
 									<p>
-									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a> I am applying unsupervised models to learn a disentangled representation of molecular space in order to to optimize the drug discovery process.
+									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a> I am designing and applying deep learning models on molecular NLP datasets to optimize the drug discovery process.
 									</p>
 									<h3>Hobbies</h2>	
 									<p>
