--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									</p>
 									<h3>Hobbies</h3>	
 									<p>
-									In my free time, I enjoy playing classical music on the piano, particularly Bach and Chopin. I also like to find ways to automate tasks in my life through scripting in Python. Lastly, I occassionally watch sports and play basketball. 
+									In my free time, I enjoy playing classical music on the piano, particularly Bach and Chopin. I also like to find ways to automate tasks in my life through scripting in Python. Lastly, I enjoy competing in sports, especially in basketball and soccer.
 									</p>
 								</div>
 								</div>
