--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 									<h3> Research Interests </h3>
 									<p>
 									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
-									My research applies ideas from high dimensional statistics and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. I've recently gained interest in the area of optimal transport and its applications
-									to machine learning. 
+									My research applies ideas from probability, high dimensional statistics, and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
+									I very much enjoy mathematical and statistical theory that is grounded in applications.
 									</p>
 									<p>
 									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
@@ -61,7 +61,8 @@
 									</p>
 									<h3>Hobbies</h3>	
 									<p>
-									In my free time, I enjoy playing classical music on the piano, particularly Bach and Chopin. I also like to find ways to automate tasks in my life through scripting in Python. Lastly, I enjoy competing in sports, especially in basketball and soccer.
+									In my free time, I enjoy playing classical music on the piano, particularly Bach and Chopin. I also like to find ways to automate tasks in my life through scripting in Python and applying new learned concepts like multithreading
+									and data scrapping. Lastly, I enjoy competing in sports, especially in basketball and soccer.
 									</p>
 								</div>
 								</div>
