--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<p>
 									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
 									My research applies ideas from probability, high dimensional statistics, and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
-									I very much enjoy mathematical and statistical theory that is grounded in applications.
+									I am passionate about mathematical and statistical theory that is grounded in applications.
 									</p>
 									<p>
 									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
