--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 									<p>
 									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
 									My research applies ideas from probability, high dimensional statistics, and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
-									I am passionate about mathematical and statistical theory that is grounded in applications.
+									I am passionate about developing theoretical and computational tools motivated by applications.
 									</p>
 									<p>
-									Previously I worked on developing an algorithm to assess patients risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
+									Previously I worked on developing an algorithm to assess medical patients's risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
 									</p>
 									<p>
 									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a> I am designing and applying deep learning models on molecular NLP datasets to optimize the drug discovery process.
