--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 									My research applies ideas from probability, high dimensional statistics, and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
 									I am passionate about developing theoretical and computational tools motivated by applications.
 									</p>
+									
+									<p>
+										I am co-organizing the <a href = https://elliotpaquette.github.io/rmtmloptseminar.html> RMT-ML-OPT Seminar at McGill </a>. If you are interested in presenting your research please reach out!
+									</p>
+							
 									<p>
 									Previously I worked on developing an algorithm to assess medical patients's risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
 									</p>
