--- a/index.html
+++ b/index.html
@@ -1,117 +1,88 @@
-<!DOCTYPE HTML>
-<!--
-	Urban by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
-	<head>
-		<title>Andrew Cheng</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-	</head>
-	<body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Andrew Cheng's personal website" />
+    <title>Andrew Cheng</title>
 
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<header>
-						<h1>Andrew Nicholas Cheng</h1>
-				  <p>
-			Research Student, Mathematics, McGill University</p>
-				  </header>
-				  <a href="#aboutme" class="button
-			big scrolly">About Me</a> &nbsp; &nbsp;	&nbsp;
-			&nbsp; &nbsp; <a href="#research" class="button
-			big scrolly">Research</a> &nbsp; &nbsp;	&nbsp;
-			&nbsp; &nbsp; <a href="Research/AndrewResume_Academia.pdf" target="_blank" class="button
-			big scrolly">CV</a>
-				</div>
-			</section>
+    <!-- CSS: Bootstrap and Custom Styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-		<!-- Main -->
-			<div id="main">
+<body>
+    <!-- Banner Section -->
+    <section id="banner" class="text-center py-5">
+        <div class="container">
+            <header>
+                <h1>Andrew Nicholas Cheng</h1>
+                <p>Research Student, Mathematics, McGill University</p>
+            </header>
+            <div class="mt-4">
+                <a href="#aboutme" class="btn btn-primary btn-lg mx-2">About Me</a>
+                <a href="#research" class="btn btn-primary btn-lg mx-2">Research</a>
+                <a href="Research/AndrewResume_Academia.pdf" target="_blank" class="btn btn-primary btn-lg mx-2">CV</a>
+            </div>
+        </div>
+    </section>
 
-				<!-- Section -->
-					<section class="wrapper
-					style1" id="aboutme">
-						<div class="container">
-							<div class="row">
-								<div class="col-sm-3 ">
-									<img src="images/eat.jpg" alt="..." class="rounded-circle img-thumbnail">
-								</div>
-								<div class="col-sm-9 ">
-									<h3> Research Interests </h3>
-									<p>
-									I am currently a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA) where I study applied mathematics under the supervision of <a href = https://cypaquette.github.io//>Professor Courtney Paquette </a>.
-									My research applies ideas from probability, high dimensional statistics, and random matrix theory to solve problems in the intersection of convex optimization, machine learning, and deep learning. 
-									I am passionate about developing theoretical and computational tools motivated by applications.
-									</p>
-									<p>
-									I am co-organizing the <a href = https://elliotpaquette.github.io/rmtmloptseminar.html> RMT-ML-OPT Seminar at McGill </a>. If you are interested in presenting your research please reach out!
-									</p>
-									<p>
-									Previously I worked on developing an algorithm to assess medical patients's risk for recurring heart attacks using survival analysis. Now I work on developing average case complexities, exact dynamics, and generalization error for high dimensional stochastic algorithms. 
-									</p>
-									<p>
-									As part of my research internship at <a href = https://www.valencediscovery.com/> Valence Discovery </a> I am designing and applying deep learning models on molecular NLP datasets to optimize the drug discovery process.
-									</p>
-									<h3>Hobbies</h3>	
-									<p>
-									In my free time, I enjoy playing classical music on the piano, particularly Bach and Chopin. I also like to find ways to automate tasks in my life through scripting in Python and applying new learned concepts like multithreading. 
-									Lastly, I enjoy competing in sports, especially in basketball and soccer.
-									</p>
-								</div>
-								</div>
-							  </div>
-						</div>
-					</section>
+    <!-- Main Content Section -->
+    <div id="main">
+        <!-- About Me Section -->
+        <section id="aboutme" class="wrapper style1 py-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-sm-3">
+                        <img src="images/eat.jpg" alt="Andrew Cheng" class="rounded-circle img-thumbnail" />
+                    </div>
+                    <div class="col-sm-9">
+                        <h3>Research Interests</h3>
+                        <p>
+                            I am a 2nd year PhD student in Computer Science at Harvard University, advised by <a href="http://melanie-weber.com" target="_blank">Professor Melanie Weber</a>. My research focuses on the intersection of machine learning, optimization, and statistics.
+                        </p>
+                        <p>
+                            I am also a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA), supervised by <a href="https://cypaquette.github.io/" target="_blank">Professor Courtney Paquette</a>.
+                        </p>
+                        <p>
+                            I co-organize the <a href="https://elliotpaquette.github.io/rmtmloptseminar.html" target="_blank">RMT-ML-OPT Seminar at McGill</a>.
+                        </p>
+                        <h3>Hobbies</h3>
+                        <p>
+                            I enjoy playing classical piano, automating tasks in Python, and playing basketball and soccer in my free time.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-				<!-- Section -->
-					<section class="wrapper
-					style2" id="research">
-						<div class="container">
-							<div class="row">
-								<div class="col-sm-9 ">
-									<p class="h3"> Research</p>
-									<a href="https://openreview.net/pdf?id=z9poo2GhOh6" target="_blank" class="
-			scrolly">Trajectory of Mini-Batch Momentum (accepted, NeurIPS 2022)</a> 
-								  <br>
-								  <p>
+        <!-- Research Section -->
+        <section id="research" class="wrapper style2 py-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-sm-9">
+                        <h3>Research</h3>
+                        <a href="https://openreview.net/pdf?id=z9poo2GhOh6" target="_blank">Trajectory of Mini-Batch Momentum (NeurIPS 2022)</a>
+                    </div>
+                    <div class="col-sm-3">
+                        <img src="images/ice.jpg" alt="Research" class="rounded-circle img-thumbnail" />
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
-								  <p>
-								  
-								</div>
-								<div class="col-sm-3 ">
-									<img src="images/ice.jpg" alt="..." class="rounded-circle img-thumbnail">
-								
-								</div>
-							  </div>
-						</div>
-					</section>
+    <!-- Footer -->
+    <footer class="text-center py-4">
+        <p>Andrew Cheng. All rights reserved. Design by <a href="https://templated.co" target="_blank">TEMPLATED</a>.</p>
+    </footer>
 
+    <!-- Scripts: jQuery, Bootstrap, Custom JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 
-
-		<!-- Footer -->
-			<footer>
-				<div class="copyright">
-					<p class="p-3 m-0 text-center"> Andrew Cheng. All rights reserved. Design: <a target="_blank"href="https://templated.co">TEMPLATED</a>. </p>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
