changed circular to rectangular image

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-3">
-                        <img src="images/eat.jpg" alt="Andrew Cheng" class="rounded-circle img-thumbnail" />
+                        <img src="images/eat.jpg" alt="Andrew Cheng" class="img-thumbnail" />
                     </div>
                     <div class="col-sm-9">
                         <h3>About Me</h3>
@@ -212,6 +212,7 @@
         <div class="row justify-content-center mb-5">
             <div class="col-md-10">
                 <h4>Trajectory of Mini-Batch Momentum</h4>
+				<p style="color: white;">Authors: Kiwon Lee, Andrew Cheng, Elliot Paquette, Courtney Paquette</p> 
                 <p>
                     This work, presented at <strong>NeurIPS 2022</strong>, explores the dynamics of mini-batch momentum in optimization algorithms used for machine learning. The research provides insights into the trajectory of momentum in stochastic optimization and its convergence properties.
                 </p>
