--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
                 <div class="row align-items-center">
                     <div class="col-sm-3">
                         <img src="images/eat.jpg" alt="Andrew Cheng" class="img-thumbnail" />
+			
                     </div>
                     <div class="col-sm-9">
                         <h3>About Me</h3>
                         <p>
                             I am a 2nd year PhD student in Computer Science at Harvard University, advised by <a href="http://melanie-weber.com" target="_blank">Melanie Weber</a>. My research lies in the interface of machine learning, optimization, and statistics. 
-							My research includes Riemannian optimization and high-dimensional learning dynamics. Recently, I am working on feature learning of equivariant neural networks and generative models (e.g. diffusion models).	
+							My research includes Riemannian optimization and high-dimensional learning dynamics. Also, I am working on generative models (e.g. diffusion models) and incorporating feature learning of neural networks into regression methods.
 							My research has been supported in part by the NSERC Postgraduate Scholarship, the Harvard Dean’s Competitive Fund for Promising Scholarship, and NSF.
                         </p>
                         <p>
