changed profile pic

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-3">
-                        <img src="images/eat.jpg" alt="Andrew Cheng" class="img-thumbnail" />
+                        <img src="images/cafe.jpg" alt="Andrew Cheng" class="img-thumbnail" />
 			
                     </div>
                     <div class="col-sm-9">
@@ -201,7 +201,7 @@
                 <p>
                    We show that general mini-batch first order algorithms (Nesterov acceleration, SGD+M, etc.) under <em>any</em> quadratic statistics 
                    \( \mathcal{R}: \mathbb{R}^d \to \mathbb{R} \) concentrates around a deterministic quantity, which is the solution of the Volterra integral equation.
-				   Examples of quadratic statistics includes but not limited to: the random features model, training loss, excess risk for empirical risk minimization (in-distribution and generalization error). By analyzing 
+				   Examples of quadratic statistics includes but not limited to: the random features model, training loss and excess risk for empirical risk minimization (in-distribution and generalization error) for ridge regression. By analyzing 
 				   the Volterra integral equation, we can analyze the optimal mini-batch size (i.e. critical batch size) and the optimal hyperparameters (learning rate, momentum, etc.) for the mini-batch algorithms.
                 </p>
                 <a href="Research/batch_opt.pdf" target="_blank" class="btn btn-primary mt-3">Workshop (Preprint soon)</a>
