--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <p>
                             I am a 2nd year PhD student in Computer Science at Harvard University, advised by <a href="http://melanie-weber.com" target="_blank">Melanie Weber</a>. My research lies in the interface of machine learning, optimization, and statistics. 
 							My research includes Riemannian optimization and high-dimensional learning dynamics. Also, I am working on generative models (e.g. diffusion models) and incorporating feature learning of neural networks into regression methods.
-							My research has been supported in part by the NSERC Postgraduate Scholarship, the Harvard Dean’s Competitive Fund for Promising Scholarship, and NSF.
+							My research has been supported in part by the NSERC Postgraduate Scholarship, the Harvard Dean’s Competitive Fund for Promising Scholarship, NSF, and FQRNT.
                         </p>
                         <p>
                             Previously, I was a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA), supervised by <a href="https://cypaquette.github.io/" target="_blank">Courtney Paquette</a> and 
