--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-sm-3">
-                        <img src="images/cafe.jpg" alt="Andrew Cheng" class="img-thumbnail" />
+                        <img src="images/cafe.pdf" alt="Andrew Cheng" class="img-thumbnail" />
 			
                     </div>
                     <div class="col-sm-9">
