arxiv added to spd optimization

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     We developed a framework for structured regularization on the positive definite manifold to induce sparsity in the solution or incorporate side information.  
                     Our framework preserves properties that allow provable non-asymptotic convergence to the global optimum of non-convex problems on the SPD manifold.
                 </p>
-                <a href="Research/spd_opt.pdf" target="_blank" class="btn btn-primary mt-3">Preprint</a>
+                <a href="https://arxiv.org/pdf/2410.09660" target="_blank" class="btn btn-primary mt-3">Preprint</a>
             </div>
         </div>
 
