--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-QJHtvGhmr9F3bdeFk8zr8K+U2K2eEt4ybuVxX1rt/TxUpPEsmf9vYsmXKp4YLvo4" crossorigin="anonymous"></script>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -123,9 +125,8 @@
         <section id="aboutme" class="wrapper style1 py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-sm-3">
-                        <img src="images/cafe.png" alt="Andrew Cheng" class="img-thumbnail" />
-			
+                    <div class="col-sm-12 col-md-3">
+                        <img src="images/cafe.png" alt="Andrew Cheng" class="img-thumbnail img-fluid" />
                     </div>
                     <div class="col-sm-9">
                         <h3>About Me</h3>
