updated title of paper.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="timeline-date">December 2024</div>
                 <div class="timeline-content">
                     <h4>Two workshop papers at <a href="https://opt-ml.org" target="_blank">NeurIPS's OPTML conference</a></h4>
-                    <p>Presented results from our papers "High Dimensional First Order Mini-Batch Algorithms on Quadratic Problems" and "Structured Regularization on the Positive Definite Manifold."</p>
+                    <p>Presented results from our papers "High Dimensional First Order Mini-Batch Algorithms on Quadratic Problems" and "Structured Regularization for Constrained Optimization on the SPD Manifold."</p>
         </div>
     </div>
 </section>
