updated november recent events/ under review

--- a/index.html
+++ b/index.html
@@ -148,8 +148,25 @@
         </section>
 
 		<!-- Existing content ... -->
-
+        
 		<!-- Timeline Section -->
+<!-- <section id="timeline" class="wrapper style3 py-5">
+    <div class="container">
+        <h2 class="text-center mb-5">Recent Events</h2>
+        <div class="timeline">
+            <div class="timeline-item">
+                <div class="timeline-date">December 2024</div>
+                <div class="timeline-content">
+                    <h4>Two workshop papers at <a href="https://opt-ml.org" target="_blank">NeurIPS's OPTML conference</a></h4>
+                    <p>Presented results from our papers "High Dimensional First Order Mini-Batch Algorithms on Quadratic Problems" and "Structured Regularization for Constrained Optimization on the SPD Manifold."</p>
+                    <div class="timeline-date">November 2024</div>
+                <div class="timeline-content">
+                    <h4> Structured Regularization for SPD Optimization with Side Information published at the 2024 Allerton Conference on Communication, Control, and Computing
+                    <p><a href="https://ieeexplore.ieee.org/abstract/document/10735290?casa_token=4S3tMl0iwhIAAAAA:u7Z5eb3ltH4_uH86lq1ecjQJFW5YR5Pv6tKbiXlGObEoM9_FbeuDDmcPqhPMgbo8u5XilkI" target="_blank"> Paper Link</p>
+        </div>
+    </div>
+</section> -->
+
 <section id="timeline" class="wrapper style3 py-5">
     <div class="container">
         <h2 class="text-center mb-5">Recent Events</h2>
@@ -159,6 +176,15 @@
                 <div class="timeline-content">
                     <h4>Two workshop papers at <a href="https://opt-ml.org" target="_blank">NeurIPS's OPTML conference</a></h4>
                     <p>Presented results from our papers "High Dimensional First Order Mini-Batch Algorithms on Quadratic Problems" and "Structured Regularization for Constrained Optimization on the SPD Manifold."</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-date">November 2024</div>
+                <div class="timeline-content">
+                    <h4>Structured Regularization for SPD Optimization with Side Information</h4>
+                    <p>Published at the 2024 Allerton Conference on Communication, Control, and Computing. <a href="https://ieeexplore.ieee.org/abstract/document/10735290?casa_token=4S3tMl0iwhIAAAAA:u7Z5eb3ltH4_uH86lq1ecjQJFW5YR5Pv6tKbiXlGObEoM9_FbeuDDmcPqhPMgbo8u5XilkI" target="_blank">Read the paper</a>.</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -180,7 +206,7 @@
                     We developed a framework for structured regularization on the positive definite manifold to induce sparsity in the solution or incorporate side information.  
                     Our framework preserves properties that allow provable non-asymptotic convergence to the global optimum of non-convex problems on the SPD manifold.
                 </p>
-                <a href="https://arxiv.org/pdf/2410.09660" target="_blank" class="btn btn-primary mt-3">Preprint</a>
+                <a href="https://arxiv.org/pdf/2410.09660" target="_blank" class="btn btn-primary mt-3">Under Review</a>
             </div>
         </div>
 
@@ -191,7 +217,7 @@
                 <p>
                     We extended the theory of disciplined convex programming to the geodesically convex setting, providing a framework for optimization on Cartan-Hadamard manifolds and focused on the symmetric positive definite manifold.
                 </p>
-                <a href="https://web3.arxiv.org/pdf/2407.05261" target="_blank" class="btn btn-primary mt-3">Preprint</a>
+                <a href="https://web3.arxiv.org/pdf/2407.05261" target="_blank" class="btn btn-primary mt-3">Under Review</a>
             </div>
         </div>
 
