--- a/index.html
+++ b/index.html
@@ -182,7 +182,13 @@
                 <div class="timeline-date">November 2024</div>
                 <div class="timeline-content">
                     <h4>Structured Regularization for SPD Optimization with Side Information</h4>
-                    <p>Published at the 2024 Allerton Conference on Communication, Control, and Computing. <a href="https://ieeexplore.ieee.org/abstract/document/10735290?casa_token=4S3tMl0iwhIAAAAA:u7Z5eb3ltH4_uH86lq1ecjQJFW5YR5Pv6tKbiXlGObEoM9_FbeuDDmcPqhPMgbo8u5XilkI" target="_blank">Read the paper</a>.</p>
+                    <p>Published at IEEE 60th Allerton Conference on Communication, Control, and Computing. 
+                        <a href="https://ieeexplore.ieee.org/abstract/document/10735290?casa_token=4S3tMl0iwhIAAAAA:u7Z5eb3ltH4_uH86lq1ecjQJFW5YR5Pv6tKbiXlGObEoM9_FbeuDDmcPqhPMgbo8u5XilkI" 
+                           target="_blank" 
+                           style="background-color: lightcoral; color: black; padding: 0 5px; border-radius: 3px;">
+                           Read here
+                        </a>.
+                        </p>
                 </div>
             </div>
         </div>
