--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <h3>About Me</h3>
                         <p>
                             I am a 2nd year PhD student in Computer Science at Harvard University, advised by <a href="http://melanie-weber.com" target="_blank">Melanie Weber</a>. My research lies in the interface of machine learning, optimization, and statistics. 
-							My research includes Riemannian optimization and high-dimensional learning dynamics. Also, I am working on generative models (e.g. diffusion models) and incorporating feature learning of neural networks into regression methods.
+							My research includes Riemannian optimization and high-dimensional learning dynamics. Also, I am incorporating feature learning of neural networks into regression methods and interested in developing novel optimization algorithms for large-scale models.
 							My research has been supported in part by the NSERC Postgraduate Scholarship, the Harvard Dean’s Competitive Fund for Promising Scholarship, NSF, and FQRNT.
                         </p>
                         <p>
