--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <a class="nav-link" href="#research">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Users/andrewcheng/Documents/andrew-website/andrewncheng.github.io/Research/andrewresume.pdf">CV</a>
+                        <a class="nav-link" href="/Research/andrewresume.pdf">CV</a>
                     </li>
                 </ul>
             </div>
